--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
             height: auto;
             /*border: 2px solid #000;*/
         }
+
+        .rotate-image {
+
+            /* Adjust the angle as needed */
+            transform: rotate(180deg);
+        }
     </style>
 </head>
 <body>
-    <img src="image.png" alt="Displayed Image">
+    <img src="image.png" alt="Displayed Image" class="rotate-image">
 </body>
 </html>
 
