--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         .rotate-image {
 
-            /* Adjust the angle as needed */
+            /* Adjust the angle as it is needed */
             transform: rotate(180deg);
         }
     </style>
