--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             /*border: 2px solid #000;*/
         }
 
-        /*.rotate-image {
+        rotate-image {
 
-            Adjust the angle as needed
+            /*Adjust the angle as needed*/
             transform: rotate(180deg);
-        } */
+        }
     </style>
 </head>
 <body>
